# reach-data-experiments

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
configs/: neo4j.conf
data/csvs/: TierZeroTable.csv  data_mappings.csv
data/customers/caesars/: crowdstrike_configs
data/customers/crowdstrike/: devices
data/customers/earlywarning/: 2025-01-07  users  (+1 more)
data/documentation/: axonius-api-overview.md
data/earlywarning/: 2025-01-07.zst  crowdstrike_configs.zst  users.zst
data/schemas/: blh-computer-schema.json  blh-containers-schema.json  blh-domains-schema.json  blh-gpos-schema.json  blh-groups-schema.json  blh-ous-schema.json  blh-users-schema.json  bloodhound-attck-schema-1.json
notebooks/: Entra_Okta_joins.ipynb  axonious-api.ipynb  bloodhound-api-export-all.ipynb  caesars-asset-intel.ipynb  early-warning-data.ipynb  schema-generation.ipynb  schema-models.ipynb  test-scrape.ipynb  user-agent-parsing.ipynb
notes/asset-intelligence/: AD Fields.md  Axonius.md  AzureHound_CLI_flags.md  AzureHound_Schema_&_Configurations.md  Azure_Entra_Okta_fields.md  Azure_vs_onprem.md  BloodHound-API.md  BloodHound.md  BloodHoundPy-README.md  BloodHound_Collectors_AD_Entra_Intune_joins.md  BloodHound_Entra_Okta_joins.md  Bloodhound Fields.md  Data Collection.md  Defualt_queries.md  Entra Fields.md  Fields.md  MITRE-ATTCK.md  MS_365.md  Okta Fields.md  Possible Findings.md  Queries.md  Query_by_priority.md  TAP Fields.md  User_Agent_parser.md  Vocabulary.md  access-control.md  conditional-access.md
scripts/: ATTCKnowledge-push.py  cypherdog15.py  mitre-attck-blh.py  mitre-bloodhound-map.py  mitre-bloodhound-test1.py  mitre-bloodhound-test2.py
source/: conf.py  index.rst
