[project]
name = "reach-data-experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "birdseye>=0.9.5",
    "boto3>=1.38.36",
    "boto3-stubs==1.38.36",
    "datamodel-code-generator>=0.31.0",
    "fastapi>=0.115.12",
    "firecrawl>=2.7.1",
    "genson>=1.3.0",
    "jaro-winkler>=2.0.3",
    "jmespath>=1.0.1",
    "neo4j>=5.28.1",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "polars-candle>=0.1.7",
    "polars-ds>=0.9.0",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "zstandard>=0.23.0",
]
