[project]
name = "reach-data-experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "altair-viewer>=0.4.0",
    "ansible-vault>=4.1.0",
    "birdseye>=0.9.5",
    "blood-hound-python-client>=2.0.0",
    "boto3>=1.38.36",
    "boto3-stubs==1.38.36",
    "datamodel-code-generator>=0.31.0",
    "fastapi>=0.115.12",
    "firecrawl>=2.7.1",
    "genson>=1.3.0",
    "hvplot>=0.11.3",
    "jaro-winkler>=2.0.3",
    "jmespath>=1.0.1",
    "nbstripout>=0.8.1",
    "neo4j>=5.28.1",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "pandas-stubs==2.3.0.250702",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "polars-candle>=0.1.7",
    "polars-ds>=0.9.0",
    "pre-commit>=4.2.0",
    "py2neo>=2021.2.4",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "sphinx>=8.2.3",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
    "zstandard>=0.23.0",
]
